--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-  width: 960px;
+  width: 1200px;
   margin: 0 auto;
   border: 1px solid red;
 }
@@ -17,7 +17,7 @@ main .hero {
   width: 100%;
 }
 main .hero .container .row {
-  padding-top: 100px;
+  padding-top: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,8 +47,8 @@ main .hero .container .row .hero-details h1 span::before {
   height: 10px;
   background: #FFC800;
   width: 475px;
-  display: inline-block;
-  top: 72%;
+  display: block;
+  top: 15%;
   z-index: -1;
   text-align: center;
   left: 0;
@@ -60,53 +60,65 @@ main .hero .container .row .hero-details p {
   margin-bottom: 30px;
   font-family: "Roboto", sans-serif;
 }
-main .hero .container .row .hero-details .hero-button {
-  background-color: #0c0c1f;
+main .hero .container .row .hero-details #hero-button {
+  background: linear-gradient(to bottom, #00095e 0%, #0c0c1f 100%);
   color: #fff;
   border-radius: 5px;
   padding: 25px 60px;
   display: inline-block;
+  line-height: 100%;
+  position: relative;
+  z-index: 0;
   transition: 0.3s;
 }
-main .hero .container .row .hero-details .hero-button:hover {
-  opacity: 0.8;
-  color: #fff;
-  text-decoration: none;
-  text-underline-offset: 0;
+main .hero .container .row .hero-details #hero-button::before {
+  background-color: #FFC800;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: -1;
+  border-radius: 5px;
+  transition: all 0.35s;
+}
+main .hero .container .row .hero-details #hero-button:hover::before {
+  bottom: 0;
 }
 main .hero .hero-background {
   display: flex;
   justify-content: center;
   align-items: flex-end;
   width: 100%;
-  height: 700px;
+  height: 880px;
   background-image: url("../images/h1_hero1.png.webp");
   background-repeat: no-repeat;
-  background-position: top center;
   background-size: cover;
 }
 main .hero .hero-background .container .row {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 main .hero .hero-background .container .row .car-moving {
   position: relative;
-  bottom: 100px;
-  animation: move 10s linear infinite alternate;
+  bottom: 130px;
+  animation: move 5s linear infinite alternate;
 }
 main .hero .hero-background .container .row .car-moving img {
-  width: 610px;
-  height: 301px;
+  width: 100%;
+  height: auto;
 }
 @keyframes move {
   0% {
     transform: translate(0, 0);
   }
   50% {
-    transform: translate(-100px, 0);
+    transform: translate(-50px, 0);
   }
   80% {
-    transform: translate(100px, 0);
+    transform: translate(50px, 0);
   }
   100% {
     transform: translate(0, 0);
@@ -116,20 +128,21 @@ main .hero .hero-background .container .row .car-moving img {
 main {
   padding-top: 100px;
 }
-main .about-hero {
+main .heros {
   width: 100%;
-  height: 380px;
+  height: 440px;
   background-image: url("../images/h1_hero4.jpg.webp");
   background-repeat: no-repeat;
   color: white;
+  display: block;
 }
-main .about-hero .container .row {
+main .heros .container .row {
   height: 380px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-main .about-hero .container .row .hero-content h2 {
+main .heros .container .row .hero-content h2 {
   color: #fff;
   font-size: 60px;
   display: block;
@@ -138,23 +151,21 @@ main .about-hero .container .row .hero-content h2 {
   font-family: "Josefin Sans", sans-serif;
 }
 
-main {
-  padding-top: 100px;
-}
-main .about-hero {
+main .event-heros {
   width: 100%;
-  height: 380px;
+  height: 440px;
   background-image: url("../images/h1_hero2.jpg.webp");
   background-repeat: no-repeat;
   color: white;
+  display: block;
 }
-main .about-hero .container .row {
+main .event-heros .container .row {
   height: 380px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-main .about-hero .container .row .hero-content h2 {
+main .event-heros .container .row .hero-content h2 {
   color: #fff;
   font-size: 60px;
   display: block;
@@ -162,25 +173,139 @@ main .about-hero .container .row .hero-content h2 {
   line-height: 1.4;
   font-family: "Josefin Sans", sans-serif;
 }
-main .events {
-  padding: 120px 0 0 0;
+
+main .heros {
+  width: 100%;
+  height: 440px;
+  background-image: url("../images/h1_hero6.jpg.webp");
+  background-repeat: no-repeat;
+  color: white;
+  display: block;
 }
-main .events .container .row {
+main .heros .container .row {
+  height: 380px;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-main .events .container .row .slider-cards {
+main .heros .container .row .hero-content h2 {
+  color: #fff;
+  font-size: 60px;
+  display: block;
+  font-weight: 700;
+  line-height: 1.4;
+  font-family: "Josefin Sans", sans-serif;
+}
+main .map {
+  margin: 60px 0;
+}
+main .map .container .row {
+  width: 100%;
+}
+main .map .container .row iframe {
+  width: 100%;
+  height: 480px;
+}
+main .contact-form {
+  margin-bottom: 120px;
+}
+main .contact-form .container .row h2 {
+  font-size: 27px;
+  font-weight: 600;
+  margin-bottom: 30px;
+  font-family: "Josefin Sans", sans-serif;
+  color: #00095E;
+}
+main .contact-form .container .row .contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+main .contact-form .container .row .contact .contact-right {
+  width: 770px;
+}
+main .contact-form .container .row .contact .contact-right form {
   display: flex;
   flex-direction: column;
+  gap: 40px;
 }
-main .events .container .row .slider-cards .card-top {
-  flex-direction: row;
+main .contact-form .container .row .contact .contact-right form textarea {
+  width: 100%;
+  height: 200px;
+  border-color: #e5e6e9;
+}
+main .contact-form .container .row .contact .contact-right form .mail {
   display: flex;
+  flex-direction: row;
   gap: 30px;
 }
-main .events .container .row .slider-cards .card-bottom {
-  flex-direction: row;
+main .contact-form .container .row .contact .contact-right form .mail input[type=text] {
+  width: 50%;
+  height: 50px;
+  border-color: #e5e6e9;
+}
+main .contact-form .container .row .contact .contact-right form .mail input[type=email] {
+  width: 50%;
+  height: 50px;
+  border-color: #e5e6e9;
+}
+main .contact-form .container .row .contact .contact-right form input[type=text] {
+  width: 100%;
+  height: 50px;
+  border-color: #e5e6e9;
+}
+main .contact-form .container .row .contact .contact-right form button {
+  width: 150px;
+  height: 60px;
+  border: 1px solid #7EA0FF;
+  background-color: #fff;
+  color: #7EA0FF;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 3px;
+  transition: 0.3s ease-in-out;
+}
+main .contact-form .container .row .contact .contact-right form button:hover {
+  color: #fff;
+  background-color: #7EA0FF;
+}
+main .contact-form .container .row .contact .contact-left {
+  width: 300px;
   display: flex;
+  flex-direction: column;
   gap: 30px;
+}
+main .contact-form .container .row .contact .contact-left .contact-info {
+  display: flex;
+  flex-direction: row;
+}
+main .contact-form .container .row .contact .contact-left .contact-info .contact-image {
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+}
+main .contact-form .container .row .contact .contact-left .contact-info .contact-image img {
+  width: 100%;
+}
+main .contact-form .container .row .contact .contact-left .contact-info .contact-content a {
+  font-family: "Josefin Sans", sans-serif;
+  color: #2a2a2a;
+  font-size: 16px;
+  margin-bottom: 8px;
+  transition: 0.3s ease-in-out;
+}
+main .contact-form .container .row .contact .contact-left .contact-info .contact-content a p {
+  transition: 0.3s ease-in-out;
+  font-size: 16px;
+  color: #8c8c8c;
+  font-family: "Roboto", sans-serif;
+}
+main .contact-form .container .row .contact .contact-left .contact-info .contact-content a:hover {
+  color: #00095E;
+}
+main .contact-form .container .row .contact .contact-left .contact-info .contact-content a:hover p:hover {
+  font-style: italic;
 }
 
 header nav {
@@ -215,25 +340,41 @@ header nav .main-menu .menu-item a:hover {
   text-underline-offset: 13px;
 }
 header nav .main-menu .menu-item .phone {
-  background-color: #FFC800;
+  background: #FFC800;
   color: #fff;
   border-radius: 5px;
   padding: 13px 30px;
   display: inline-block;
+  line-height: 100%;
+  position: relative;
+  z-index: 0;
   transition: 0.3s;
   font-family: "Josefin Sans", sans-serif;
 }
-header nav .main-menu .menu-item .phone:hover {
-  opacity: 0.8;
-  color: #fff;
-  text-decoration: none;
-  text-underline-offset: 0;
+header nav .main-menu .menu-item .phone::before {
+  background-color: #00095E;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: -1;
+  border-radius: 5px;
+  transition: all 0.35s;
+}
+header nav .main-menu .menu-item .phone:hover::before {
+  bottom: 0;
 }
 header nav .main-menu .menu-item .phone:hover {
   opacity: 0.8;
   color: #fff;
   text-decoration: none;
   text-underline-offset: 0;
+}
+header nav .main-menu .menu-item .phone:hover::before {
+  display: none;
 }
 header nav .main-menu .dropdown a {
   font-family: "Josefin Sans", sans-serif;
@@ -278,6 +419,7 @@ footer {
   background-color: #1a2d6d;
 }
 footer .container .row {
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding-top: 114px;
@@ -293,6 +435,7 @@ footer .container .row .footer-top .footer-part {
   padding: 0 15px;
 }
 footer .container .row .footer-top .footer-part p {
+  width: 370px;
   color: #8A8FBE;
   font-size: 16px;
   margin: 35px 0 21px 0;
@@ -305,6 +448,13 @@ footer .container .row .footer-top .footer-part .social-medias a {
   color: #fff;
   font-size: 22px;
   padding: 9px;
+  position: relative;
+  top: 0;
+  transition: all 0.3s ease-in-out;
+}
+footer .container .row .footer-top .footer-part .social-medias a:hover {
+  color: #FFC800;
+  top: -5px;
 }
 footer .container .row .footer-top .footer-part h4 {
   color: #fff;
@@ -328,7 +478,7 @@ footer .container .row .footer-top .footer-part ul li .mobile-phone {
   color: #FFC800;
   font-size: 22px;
   font-weight: 400;
-  transition: 0.3s;
+  transition: 0.3s ease-in-out;
 }
 footer .container .row .footer-top .footer-part ul li .mobile-phone:hover {
   text-decoration: none;
@@ -348,7 +498,7 @@ footer .container .row .footer-bottom p a {
   color: #FFC800;
 }
 footer .go-top {
-  background: #7EA0FF;
+  background-color: #7EA0FF;
   height: 50px;
   width: 50px;
   right: 31px;
@@ -358,13 +508,20 @@ footer .go-top {
   text-align: center;
   line-height: 48px;
   font-size: 20px;
-  border: 2px solid transparent;
   box-shadow: 0 0 10px 3px rgba(108, 98, 98, 0.2);
+  transition: 0.5s ease-in-out;
 }
 footer .go-top i {
   color: #fff;
 }
+footer .go-top:hover {
+  transform: scale(0.8);
+  background-color: #1a2d6d;
+}
 
+.instagram {
+  margin-top: 60px;
+}
 .instagram .row {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
@@ -377,12 +534,11 @@ footer .go-top i {
   height: auto;
   display: block;
   opacity: 1;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
+  transition: 0.5s ease-in-out;
 }
 .instagram .row .col-items .insta-hover {
   position: absolute;
-  transition: 0.5s ease;
+  transition: 0.5s ease-in-out;
   opacity: 0;
   font-size: 30px;
   top: 50%;
@@ -394,18 +550,30 @@ footer .go-top i {
   color: #fff;
 }
 .instagram .row .col-items:hover img {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 .instagram .row .col-items:hover .insta-hover {
   opacity: 1;
 }
 
+.about-us {
+  padding: 60px 0;
+}
 .about-us .container .row {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 30px;
-  padding: 100px 0;
+}
+.about-us .container .row .about-image {
+  width: 570px;
+}
+.about-us .container .row .about-image img {
+  width: 100%;
+}
+.about-us .container .row .about-content {
+  width: 470px;
 }
 .about-us .container .row .about-content span {
   font-size: 16px;
@@ -416,7 +584,7 @@ footer .go-top i {
   font-weight: 400;
 }
 .about-us .container .row .about-content h2 {
-  font-size: 41px;
+  font-size: 50px;
   font-family: "Josefin Sans", sans-serif;
   display: block;
   color: #00095E;
@@ -433,34 +601,35 @@ footer .go-top i {
   line-height: 1.8;
 }
 .about-us .container .row .about-content .about-button {
-  background-color: #FFC800;
+  background: #FFC800;
   color: #fff;
   border-radius: 5px;
-  padding: 30px 40px;
+  padding: 25px 40px;
   display: inline-block;
+  line-height: 100%;
+  position: relative;
+  z-index: 0;
   transition: 0.3s;
-  margin: 0;
 }
-.about-us .container .row .about-content .about-button:hover {
-  opacity: 0.8;
-  color: #fff;
-  text-decoration: none;
-  text-underline-offset: 0;
+.about-us .container .row .about-content .about-button::before {
+  background-color: #00095E;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: -1;
+  border-radius: 5px;
+  transition: all 0.35s;
+}
+.about-us .container .row .about-content .about-button:hover::before {
+  bottom: 0;
 }
 
-@media (max-width: 320px) {
-  .about-us .container {
-    width: 100%;
-  }
-  .about-us .container .row {
-    flex-direction: column;
-    padding: 50px 0;
-  }
-  .about-us .container .row .about-image img {
-    width: 100%;
-  }
-}
 .testimonial {
+  margin: 60px 0;
   width: 100%;
   height: 600px;
   display: flex;
@@ -477,7 +646,7 @@ footer .go-top i {
   color: #fff;
 }
 .testimonial .container .row .testimonial-content {
-  width: 770px;
+  width: 990px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -493,7 +662,7 @@ footer .go-top i {
   line-height: 1.5;
   padding: 0 50px;
   margin-bottom: 32px;
-  font-size: 20px;
+  font-size: 26px;
   font-weight: 400;
 }
 .testimonial .container .row .testimonial-content .testi-bottom {
@@ -514,21 +683,9 @@ footer .go-top i {
   line-height: 1.5;
 }
 
-@media (max-width: 320px) {
-  .testimonial .container {
-    width: 100%;
-  }
-  .testimonial .container .testimonial-content {
-    justify-content: center;
-  }
-  .testimonial .container .testimonial-content h2 {
-    text-align: center;
-    font-size: 29px;
-  }
-}
 .video {
   width: 100%;
-  padding: 120px 0;
+  padding: 60px 0;
 }
 .video .container .row {
   height: 500px;
@@ -562,9 +719,10 @@ footer .go-top i {
 }
 
 .faq {
-  padding-top: 120px;
+  padding: 60px 0;
 }
 .faq .container .row {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 25px;
@@ -590,12 +748,14 @@ footer .go-top i {
   margin-bottom: 22px;
 }
 .faq .container .row .faq-content {
-  display: grid;
-  grid-template-columns: auto auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .faq .container .row .faq-content .faq-content-left {
   width: 480px;
-  padding: 20px 15px 20px 0;
+  padding: 0 30px;
 }
 .faq .container .row .faq-content .faq-content-left .faq__detail {
   width: 360px;
@@ -625,7 +785,7 @@ footer .go-top i {
   margin-right: 20px;
 }
 .faq .container .row .faq-content .faq-content-left .faq__detail .faq__text {
-  width: 360px;
+  width: 376px;
   padding: 20px 38px;
 }
 .faq .container .row .faq-content .faq-content-left details[open] .faq__summary:before {
@@ -633,6 +793,9 @@ footer .go-top i {
   width: 18px;
   height: 10px;
   content: "-";
+}
+.faq .container .row .faq-content .faq-content-right {
+  width: 570px;
 }
 .faq .container .row .faq-content .faq-content-right img {
   width: 100%;
@@ -643,24 +806,35 @@ footer .go-top i {
   justify-content: center;
 }
 .faq .container .row .faq-bottom .faq-button {
-  background-color: #FFC800;
+  background: #FFC800;
   color: #fff;
   border-radius: 5px;
-  padding: 30px 40px;
+  padding: 25px 40px;
   display: inline-block;
+  line-height: 100%;
+  position: relative;
+  z-index: 0;
   transition: 0.3s;
 }
-.faq .container .row .faq-bottom .faq-button:hover {
-  opacity: 0.8;
-  color: #fff;
-  text-decoration: none;
-  text-underline-offset: 0;
+.faq .container .row .faq-bottom .faq-button::before {
+  background-color: #00095E;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 100%;
+  left: 0;
+  z-index: -1;
+  border-radius: 5px;
+  transition: all 0.35s;
+}
+.faq .container .row .faq-bottom .faq-button:hover::before {
+  bottom: 0;
 }
 
-.events {
-  padding: 120px 0;
-}
 .events .container .row {
+  padding: 120px 0 60px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -690,15 +864,25 @@ footer .go-top i {
   display: flex;
   flex-direction: row;
   gap: 30px;
+  margin-bottom: 30px;
+}
+.events .container .row .slider-cards .card {
+  width: 360px;
 }
 .events .container .row .slider-cards .card .card-image {
-  width: 280px;
+  width: 360px;
+  overflow: hidden;
 }
 .events .container .row .slider-cards .card .card-image img {
   width: 100%;
   transform: scale(1);
+  transition: 0.3s ease-in-out;
+}
+.events .container .row .slider-cards .card .card-image img:hover {
+  transform: scale(1.1);
 }
 .events .container .row .slider-cards .card .card-info {
+  width: 360px;
   border-radius: 0px 0px 5px 5px;
   padding: 30px 20px 30px 23px;
   box-shadow: 0 10px 15px rgba(0, 9, 94, 0.06);
@@ -714,6 +898,10 @@ footer .go-top i {
   font-weight: 700;
   margin-bottom: 10px;
   display: block;
+  transition: 0.3s ease-in-out;
+}
+.events .container .row .slider-cards .card .card-info .card-info-top h3 a:hover {
+  opacity: 0.8;
 }
 .events .container .row .slider-cards .card .card-info .card-info-top span {
   font-size: 22px;
@@ -723,7 +911,7 @@ footer .go-top i {
 }
 .events .container .row .slider-cards .card .card-info p a {
   color: #7EA0FF;
-  background: rgba(126, 160, 255, 0.05);
+  background-color: rgba(126, 160, 255, 0.05);
   font-size: 14px;
   display: inline-block;
   font-weight: 500;
@@ -732,6 +920,10 @@ footer .go-top i {
   padding: 9px 15px;
   border-radius: 19px;
   margin-right: 13px;
+  transition: 0.3s ease-in-out;
+}
+.events .container .row .slider-cards .card .card-info p a:hover {
+  color: rgba(0, 9, 94, 0.5019607843);
 }
 .events .container .row .slider-cards .card .card-info p span {
   color: #00095E;
@@ -740,19 +932,4 @@ footer .go-top i {
   margin: 0;
   padding: 0;
   line-height: 1.4;
-}
-
-@media (max-width: 320px) {
-  .events {
-    width: 100%;
-  }
-  .events .container {
-    width: 100%;
-  }
-  .card:nth-child(2) {
-    display: none;
-  }
-  .card:nth-child(3) {
-    display: none;
-  }
 }/*# sourceMappingURL=index.css.map */
