--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1,7 +1,8 @@
 @import '../scss/base';
 @import '../scss/pages/home';
 @import '../scss/pages/about';
-@import '../scss/pages/events';
+@import '../scss/pages/events-page';
+@import '../scss/pages/contact';
 @import '../scss/components/header';
 @import '../scss/components/footer';
 @import '../scss/components/instagram';
@@ -10,4 +11,4 @@
 @import '../scss/components/video';
 @import '../scss/components/faq';
 @import '../scss/components/events';
-@import '../scss/mixins'
+@import '../scss/mixins';
