--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -1,46 +1,57 @@
-@mixin button($bgrClr, $pad){
-    // margin:25px 0 25px 40px;
-    background-color: $bgrClr;
+@mixin button ($bgrClr, $pad, $bgCl){
+    background: $bgrClr;
     color:#fff;
     border-radius: 5px;
     padding: $pad;
     display: inline-block;
+    line-height: 100%;
+    position: relative;
+    z-index: 0;
     transition: .3s ;
+    &::before {
+        background-color:$bgCl;
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 100%;
+        left: 0;
+        z-index: -1;
+        border-radius: 5px;
+        transition: all .35s ;
+    }
     &:hover{
-        opacity: 0.8;
-        color:#fff;
-        text-decoration: none;
-        text-underline-offset:0;
+        &::before{
+            bottom: 0;
+        }
     }
 }
 
-// @mixin hero($bg-image){
-//     main{
-//         padding-top: 100px;
-//         .about-hero{
-//         width:100%;
-//         height: 380px;
-//         background-image: $bg-image;
-//         background-repeat: no-repeat;
-//         color:white;
-//         .container{
-//             .row{
-//                 height: 380px;
-//                 display: flex;
-//                 justify-content: center;
-//                 align-items: center;
-//                 .hero-content{
-//                     h2{
-//                         color: #fff;
-//                         font-size: 60px;
-//                         display: block;
-//                         font-weight: 700;
-//                         line-height: 1.4;
-//                         font-family: "Josefin Sans",sans-serif;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-//     }
-// }
+@mixin heros($bg-image){
+        width:100%;
+        height: 440px;
+        background-image: $bg-image ;
+        background-repeat: no-repeat;
+        color:white;
+        display: block;
+        .container{
+            .row{
+                height: 380px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .hero-content{
+                    h2{
+                        color: #fff;
+                        font-size: 60px;
+                        display: block;
+                        font-weight: 700;
+                        line-height: 1.4;
+                        font-family: "Josefin Sans",sans-serif;
+                    }
+                }
+            }
+        }
+    
+}
