--- a/assets/scss/components/_about-us.scss
+++ b/assets/scss/components/_about-us.scss
@@ -1,13 +1,21 @@
 @import '../mixins';
 .about-us{
+    padding:60px 0;
     .container{
         .row{
+            width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: center;
             gap:30px;
-            padding:100px 0;
+            .about-image{
+                width:570px;
+                img{
+                    width:100%;
+                }
+            }
             .about-content{
+                width:470px;
                 span{
                     font-size:16px;
                     color:#7EA0FF;
@@ -17,7 +25,7 @@
                     font-weight: 400;
                 }
                 h2{
-                    font-size: 41px;
+                    font-size: 50px;
                     font-family: "Josefin Sans",sans-serif;
                     display: block;
                     color: #00095E;
@@ -34,26 +42,25 @@
                     line-height: 1.8;
                 }
                 .about-button{
-                    @include button(#FFC800, 30px 40px);
-                    margin:0;
+                    @include button(#FFC800, 25px 40px, #00095E);
                 }
             }
         }
     }
 }
-@media (max-width:320px){
-    .about-us{
-        .container{
-            width: 100%;
-            .row{
-                flex-direction: column;
-                padding: 50px 0;
-                .about-image{
-                    img{
-                        width: 100%;
-                    }
-                }
-            }
-        }
-    }
-}
+// @media (max-width:320px){
+//     .about-us{
+//         .container{
+//             width: 100%;
+//             .row{
+//                 flex-direction: column;
+//                 padding: 50px 0;
+//                 .about-image{
+//                     img{
+//                         width: 100%;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
