--- a/assets/scss/components/_events.scss
+++ b/assets/scss/components/_events.scss
@@ -1,7 +1,7 @@
 .events{
-    padding:120px 0;
     .container{
         .row{
+            padding: 120px 0 60px 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -30,15 +30,23 @@
                 display: flex;
                 flex-direction: row;
                 gap:30px;
+                margin-bottom: 30px;
                 .card{
+                    width:360px;
                     .card-image{
-                        width:280px;
+                        width:360px;
+                        overflow: hidden;
                         img{
                             width: 100%;
                             transform: scale(1);
+	                        transition: .3s ease-in-out;
+                            &:hover{
+                                transform: scale(1.1);
+                            }
                         }
                     }
                     .card-info{
+                        width:360px;
                         border-radius: 0px 0px 5px 5px;
                         padding: 30px 20px 30px 23px;
                         box-shadow: 0 10px 15px rgba(0,9,94,0.06);
@@ -53,6 +61,10 @@
                                     font-weight: 700;
                                     margin-bottom: 10px;
                                     display: block;
+                                    transition: .3s ease-in-out;
+                                    &:hover{
+                                        opacity: 0.8;
+                                    }
                                 }
                             }
                             span{
@@ -65,7 +77,7 @@
                         p{
                             a{
                                 color: #7EA0FF;
-                                background: rgba(126,160,255,0.05);
+                                background-color: rgba(126,160,255,0.05);
                                 font-size: 14px;
                                 display: inline-block;
                                 font-weight: 500;
@@ -74,6 +86,10 @@
                                 padding: 9px 15px;
                                 border-radius: 19px;
                                 margin-right: 13px;
+                                transition: .3s ease-in-out;
+                                    &:hover{
+                                        color: #00095E80;
+                                    }
                             }
                             span{
                                 color: #00095E;
@@ -91,18 +107,18 @@
     }
 }
 
-@media (max-width:320px){
-    .events{
-        width: 100%;
-        .container{
-            width: 100%;
-        }
-    }
+// @media (max-width:320px){
+//     .events{
+//         width: 100%;
+//         .container{
+//             width: 100%;
+//         }
+//     }
     
-    .card:nth-child(2){
-        display:none;
-    }
-    .card:nth-child(3){
-        display:none;
-    }
-}
+//     .card:nth-child(2){
+//         display:none;
+//     }
+//     .card:nth-child(3){
+//         display:none;
+//     }
+// }
