--- a/assets/scss/components/_faq.scss
+++ b/assets/scss/components/_faq.scss
@@ -1,8 +1,9 @@
 @import '../mixins';
 .faq{
-    padding-top:120px;
+    padding:60px 0;
     .container{
         .row{
+            width:100%;
             display: flex;
             flex-direction: column;
             gap:25px;
@@ -27,11 +28,13 @@
                 }
             }
             .faq-content{
-                display: grid;
-                grid-template-columns: auto auto;
+                width:100%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
                 .faq-content-left{
                     width:480px;
-                    padding: 20px 15px 20px 0;
+                    padding: 0 30px;
                     .faq__detail {
                         width:360px;
                         border-bottom: 1px solid hsl(240, 5%, 91%);
@@ -60,7 +63,7 @@
                             }
                         }
                         .faq__text{
-                            width:360px;
+                            width:376px;
                             padding: 20px 38px;
                         }
                     }
@@ -72,6 +75,7 @@
                     }
                 }
                 .faq-content-right{
+                    width:570px;
                     img{
                         width: 100%;
                     }
@@ -82,7 +86,7 @@
                 align-items: center;
                 justify-content: center;
                 .faq-button{
-                    @include button(#FFC800, 30px 40px);
+                    @include button(#FFC800, 25px 40px, #00095E);
                 }
             }
         }
