--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -2,6 +2,7 @@ footer{
     background-color: #1a2d6d;
     .container{
         .row{
+            width: 100%;
             display: flex;
             flex-direction: column;
             padding-top:114px;
@@ -13,7 +14,8 @@ footer{
                     display: flex;
                     flex-direction: column;
                     padding: 0 15px;
-                    p{
+                    p{  
+                        width:370px;
                         color: #8A8FBE;
                         font-size: 16px;
                         margin:35px 0 21px 0;
@@ -23,7 +25,14 @@ footer{
                         a{
                             color: #fff;
                             font-size: 22px; 
-                            padding: 9px;                   
+                            padding: 9px; 
+                            position: relative;
+                            top:0;
+                            transition: all .3s ease-in-out;
+                            &:hover{
+                                color: #FFC800;
+                                top: -5px;
+                            }                  
                         }
                         margin-bottom: 40px;
                     }
@@ -49,7 +58,7 @@ footer{
                                 color:#FFC800;
                                 font-size: 22px;
                                 font-weight: 400;
-                                transition: .3s;
+                                transition: .3s ease-in-out;
                                 &:hover{
                                     text-decoration: none;
                                 }
@@ -75,7 +84,7 @@ footer{
         }
     }
     .go-top{
-        background: #7EA0FF;
+        background-color: #7EA0FF;
         height: 50px;
         width: 50px;
         right: 31px;
@@ -85,10 +94,14 @@ footer{
         text-align: center;
         line-height: 48px;
         font-size: 20px;
-        border: 2px solid transparent;
         box-shadow: 0 0 10px 3px rgba(108,98,98,0.2);
+        transition: .5s ease-in-out;
         i{
             color:#fff;
+        }
+        &:hover{
+            transform: scale(0.8);
+            background-color: #1a2d6d;
         }
     }
 }
