--- a/assets/scss/components/_instagram.scss
+++ b/assets/scss/components/_instagram.scss
@@ -1,4 +1,5 @@
 .instagram{
+    margin-top:60px;
     .row{
         display: grid;
         grid-template-columns: auto auto auto auto auto;
@@ -9,12 +10,11 @@
                 height: auto;
                 display: block;
                 opacity: 1;
-                transition: .5s ease;
-                backface-visibility: hidden;
+                transition: .5s ease-in-out;
             }
             .insta-hover{
                 position: absolute;
-                transition: .5s ease;
+                transition: .5s ease-in-out;
                 opacity: 0;
                 font-size: 30px;
                 top: 50%;
@@ -27,7 +27,7 @@
             }
             &:hover{
                 img{
-                    opacity: 0.8;
+                    opacity: 0.9;
                 }
                 .insta-hover{
                     opacity: 1;
