--- a/assets/scss/components/_testimonial.scss
+++ b/assets/scss/components/_testimonial.scss
@@ -1,4 +1,5 @@
 .testimonial{
+    margin:  60px 0;
     width:100%;
     height:600px;
     display: flex;
@@ -14,7 +15,7 @@
             justify-content: center;
             color:#fff;
             .testimonial-content{
-                width:770px;
+                width:990px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -29,7 +30,7 @@
                     line-height: 1.5;
                     padding: 0 50px;
                     margin-bottom: 32px;
-                    font-size: 20px;
+                    font-size: 26px;
                     font-weight: 400;
                 }
                 .testi-bottom{
@@ -54,17 +55,17 @@
     }
 }
 
-@media (max-width:320px){
-    .testimonial{
-        .container{
-            width: 100%;
-            .testimonial-content{
-                justify-content: center;
-                h2{
-                    text-align: center;
-                    font-size: 29px;
-                }
-            }
-        }
-    }
-}
+// @media (max-width:320px){
+//     .testimonial{
+//         .container{
+//             width: 100%;
+//             .testimonial-content{
+//                 justify-content: center;
+//                 h2{
+//                     text-align: center;
+//                     font-size: 29px;
+//                 }
+//             }
+//         }
+//     }
+// }
