--- a/assets/scss/pages/_about.scss
+++ b/assets/scss/pages/_about.scss
@@ -1,33 +1,7 @@
-// @import '../mixins';
-
-// .about-hero{
-//     @include hero (url('../images/h1_hero4.jpg.webp'));
-// }
+@import '../mixins';
 main{
-            padding-top: 100px;
-            .about-hero{
-            width:100%;
-            height: 380px;
-            background-image: url('../images/h1_hero4.jpg.webp');
-            background-repeat: no-repeat;
-            color:white;
-            .container{
-                .row{
-                    height: 380px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    .hero-content{
-                        h2{
-                            color: #fff;
-                            font-size: 60px;
-                            display: block;
-                            font-weight: 700;
-                            line-height: 1.4;
-                            font-family: "Josefin Sans",sans-serif;
-                        }
-                    }
-                }
-            }
-        }
-        }
+    padding-top: 100px;
+    .heros{
+        @include heros(url('../images/h1_hero4.jpg.webp'));
+    }
+}
