--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -89,3 +89,10 @@ header{
         }  
     }
 }
+@media (max-width:768px){
+    nav{
+        .main-menu{
+            display: none;
+        }
+    }
+}
