--- a/assets/scss/components/_about-us.scss
+++ b/assets/scss/components/_about-us.scss
@@ -9,13 +9,13 @@
             align-items: center;
             gap:30px;
             .about-image{
-                width:570px;
+                max-width:570px;
                 img{
                     width:100%;
                 }
             }
             .about-content{
-                width:470px;
+                max-width:470px;
                 span{
                     font-size:16px;
                     color:#7EA0FF;
@@ -48,19 +48,16 @@
         }
     }
 }
-// @media (max-width:320px){
-//     .about-us{
-//         .container{
-//             width: 100%;
-//             .row{
-//                 flex-direction: column;
-//                 padding: 50px 0;
-//                 .about-image{
-//                     img{
-//                         width: 100%;
-//                     }
-//                 }
-//             }
-//         }
-//     }
-// }
+
+@media (max-width:768px){
+    .container{
+        .row{
+            flex-direction: column;
+            .about-content{
+                h2{
+                    font-size: 24px !important;
+                }
+            }
+        }
+    }
+}
