--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -15,7 +15,7 @@ footer{
                     flex-direction: column;
                     padding: 0 15px;
                     p{  
-                        width:370px;
+                        max-width:370px;
                         color: #8A8FBE;
                         font-size: 16px;
                         margin:35px 0 21px 0;
@@ -106,3 +106,12 @@ footer{
     }
 }
 
+@media (max-width:768px){
+    .container{
+        .row{
+            .footer-top{
+                flex-direction: column !important;
+            }
+        }
+    }
+}
