--- a/assets/scss/components/_testimonial.scss
+++ b/assets/scss/components/_testimonial.scss
@@ -1,7 +1,7 @@
 .testimonial{
     margin:  60px 0;
     width:100%;
-    height:600px;
+    min-height:600px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,7 +15,7 @@
             justify-content: center;
             color:#fff;
             .testimonial-content{
-                width:990px;
+                max-width:990px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -54,18 +54,34 @@
         }
     }
 }
+@media (max-width: 768px) {
+    .container {
+        .row {
+            .testimonial-content {
+                width: 100%;
+                h2 {
+                    font-size: 24px !important;
+                }
+                p {
+                    font-size: 16px !important;
+                    padding: 0 20px;
+                }
+            .testi-bottom {
+                flex-direction: column;
+                align-items: flex-start;
+                p {
+                margin-left: 0;
+                margin-bottom: 10px;
+                }
+            }
+        }
+        }
+    }
+}
 
-// @media (max-width:320px){
-//     .testimonial{
-//         .container{
-//             width: 100%;
-//             .testimonial-content{
-//                 justify-content: center;
-//                 h2{
-//                     text-align: center;
-//                     font-size: 29px;
-//                 }
-//             }
-//         }
-//     }
-// }
+
+
+
+
+
+
