--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -10,7 +10,7 @@ main{
                 width:100%;
                 iframe{
                     width:100%;
-                    height:480px; 
+                    min-height:480px; 
                 }
             }
         }
@@ -31,14 +31,14 @@ main{
                     flex-direction: row;
                     justify-content: space-between;
                     .contact-right{
-                        width:770px;
+                        max-width: 770px;
                         form{
                             display: flex;
                             flex-direction: column;
                             gap:40px;
                             textarea{
                                 width:100%;
-                                height:200px;
+                                min-height:200px;
                                 border-color:#e5e6e9;
                             }
                             .mail{
@@ -47,23 +47,23 @@ main{
                                 gap:30px;
                                 input[type="text"]{
                                     width:50%;
-                                    height:50px;
+                                    min-height:50px;
                                     border-color:#e5e6e9;
                                 }
                                 input[type="email"]{
                                     width:50%;
-                                    height:50px;
+                                    min-height:50px;
                                     border-color:#e5e6e9;
                                 }
                             }
                             input[type="text"]{
                                 width:100%;
-                                height:50px;
+                                min-height:50px;
                                 border-color:#e5e6e9;
                             }
                             button{
                                 width:150px;
-                                height:60px;
+                                min-height:60px;
                                 border:1px solid #7EA0FF;
                                 background-color: #fff;
                                 color: #7EA0FF;
@@ -80,7 +80,7 @@ main{
                         }
                     }
                     .contact-left{
-                        width:300px;
+                        max-width:300px;
                         display: flex;
                         flex-direction: column;
                         gap:30px;
@@ -88,8 +88,8 @@ main{
                             display: flex;
                             flex-direction: row;
                             .contact-image{
-                                width:30px;
-                                height:30px;
+                                max-width:30px;
+                                min-height:30px;
                                 margin-right:15px;
                                 img{
                                     width:100%;
@@ -123,4 +123,17 @@ main{
         }
     }
 
+}
+
+@media (max-width:768px){
+    .contact-form{
+        height:100%;
+
+        .contact{
+            display: flex;
+            flex-direction: column !important;
+            gap:30px;
+    
+        }
+    }
 }
